# automotive-bus-schema

./: CONTRIBUTING.md  Makefile  NOTICE  README.md
.github/workflows/: builders.yaml  ci.yaml
doc/: network_model_can.md  network_model_ethernet.md  network_model_flexray.md
doc/examples/: cmake.md  streams.md
doc/register/: can.md  ethernet.md  flexray.md
doc/schemas/register/: can.md  flexray.md
docker/flatc-builder/: Dockerfile
docker/gcc-builder/: Dockerfile
docker/python-builder/: Dockerfile
examples/cmake/: CMakeLists.txt  Makefile  example.c
examples/streams/: CMakeLists.txt  Makefile  frames.c
schemas/: network_model_can.fbs  network_model_ethernet.fbs  network_model_flexray.fbs  network_model_signal.fbs
schemas/register/: can.fbs  ethernet.fbs  flexray.fbs  register_interface__ethernet.fbs
schemas/signal/: channel.fbs  data_payloads.yaml  encoder.fbs  parameter.fbs
schemas/signal/flatbuffers/: channel.fbs  parameter.fbs
schemas/signal/msgpack/: data_payloads.yaml
schemas/stream/: can.fbs  frame.fbs  pdu.fbs
templates/python/: setup.py
